--- a/app/src/main/res/layout/add_dialog.xml
+++ b/app/src/main/res/layout/add_dialog.xml
@@ -10,10 +10,10 @@
     tools:layout_editor_absoluteY="81dp">
 
     <LinearLayout
-        android:layout_width="350dp"
-        android:layout_height="298dp"
+        android:layout_width="wrap_content"
+        android:layout_height="534dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/capture5"
+        android:background="@drawable/capture10"
         android:orientation="vertical"
         android:weightSum="100">
 
@@ -27,13 +27,39 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
-                android:text="departure address:"
-                android:textColor="@color/black" />
+                android:text="Departure address:"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/adresseDepart"
+                android:layout_width="178dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="2dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:textColor="@color/black" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <TextView
                 android:layout_width="150dp"
-                android:layout_height="41dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:gravity="center|right"
+                android:text="Departure city:"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <EditText
+                android:layout_width="178dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
@@ -54,17 +80,19 @@
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Date of departure:"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/heureDepart"
-                android:layout_width="150dp"
-                android:layout_height="39dp"
+                android:layout_width="178dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
                 android:inputType="datetime"
                 android:textColor="@color/black" />
+
         </LinearLayout>
 
 
@@ -80,12 +108,37 @@
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Destination address:"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/adresseDestination"
+                android:layout_width="178dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="2dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal">
+
+            <TextView
                 android:layout_width="150dp"
-                android:layout_height="39dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:gravity="center|right"
+                android:text="Destination city:"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <EditText
+                android:layout_width="178dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
@@ -105,13 +158,14 @@
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Number of places :"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
 
             <EditText
                 android:id="@+id/nombrePlace"
-                android:layout_width="150dp"
-                android:layout_height="39dp"
+                android:layout_width="178dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
@@ -131,13 +185,14 @@
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Price:"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
 
             <EditText
                 android:id="@+id/prix"
-                android:layout_width="150dp"
-                android:layout_height="39dp"
+                android:layout_width="178dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
@@ -157,12 +212,13 @@
                 android:layout_marginLeft="20dp"
                 android:gravity="center|right"
                 android:text="Telephone number:"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/telephone"
-                android:layout_width="150dp"
-                android:layout_height="39dp"
+                android:layout_width="179dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
@@ -170,12 +226,69 @@
                 android:textColor="@color/black" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btnSave"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            app:backgroundTint="@color/purple_200" />
+            android:layout_height="164dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="198dp"
+                android:orientation="vertical">
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="12dp" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="153dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|left|center_vertical"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:gravity="right|center_horizontal|center_vertical"
+                    android:text="Description:"
+                    android:textAlignment="gravity"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:ems="10"
+                    android:inputType="numberDecimal"
+                    android:textColor="@color/black" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="54dp"
+                    android:orientation="horizontal">
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/btnSave"
+                        android:layout_width="68dp"
+                        android:layout_height="match_parent"
+                        android:text="Save"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:backgroundTint="@color/purple_200" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 
     </LinearLayout>
