--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/buttonPlus"
         android:layout_width="54dp"
         android:layout_height="37dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="2dp"
         android:text="+"
         android:textColor="@color/black"
         app:backgroundTint="@color/purple_200"
@@ -34,7 +34,6 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -51,14 +50,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        tools:layout_editor_absoluteY="41dp"
+        tools:ignore="MissingConstraints" />
 
     <ListView
         android:id="@+id/listData"
-        android:layout_width="333dp"
-        android:layout_height="466dp"
+        android:layout_width="391dp"
+        android:layout_height="501dp"
 
-        android:background="@drawable/_6390692_r_sum__flou_fond_d_grad__avec_la_tendance_pastel_rose_pourpre_violet_jaune_et_bleu_pour_les_concepts_daigne_"
+
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -66,14 +66,5 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:fastScrollAlwaysVisible="true" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="124dp"
-        android:layout_height="57dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/aa" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
