--- a/app/src/main/res/layout/send_request.xml
+++ b/app/src/main/res/layout/send_request.xml
@@ -34,7 +34,7 @@
 
 
             <EditText
-                android:id="@+id/nombrePlace"
+                android:id="@+id/destinationCitySh"
                 android:layout_width="178dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
@@ -116,7 +116,7 @@
                         android:layout_weight="1" />
 
                     <Button
-                        android:id="@+id/btnSave"
+                        android:id="@+id/btnSearch"
                         android:layout_width="68dp"
                         android:layout_height="match_parent"
                         android:text="Send"
